[package]
name = "dither-onion-router"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
env_logger = "0.8.3"
fancy-regex = "0.5.0"
log = "0.4.14"
nalgebra = "0.25.1"
petgraph = { version = "0.5.1", features = ["graphmap"] }
plotters = "0.3.0"
priority-queue = "1.0.5"
rand = { version = "0.7.3", features=["small_rng"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
ta = "0.4.0"
thiserror = "1.0.24"
