[package]
name = "dbr-sim"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
bitflags = "1.2.1"
derivative = "2.2.0"
env_logger = "0.8.3"
fancy-regex = "0.5.0"
log = "0.4.14"
plotters = "0.3.0"
priority-queue = "1.0.5"
rand = { version = "0.8.3", features = ["small_rng"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
bincode = "1.3.2"

nalgebra = { version = "0.25.1", features = ["serde-serialize"] }
petgraph = { version = "0.5.1", features = ["graphmap", "serde-1"] }
slotmap = { version = "1.0.2", features = ["serde"] }
smallvec = { version = "1.6.1", features = ["serde"] }
bimap = { version = "0.6.0", features = ["serde"] }

ta = "0.4.0"
thiserror = "1.0.24"
vpsearch = "2.0.1"
permutation_iterator = "0.1.2"
csv = "1.1.6"

